sign up api integration

--- a/src/app/client/src/app/modules/public/module/signup/components/signup/signup.component.html
+++ b/src/app/client/src/app/modules/public/module/signup/components/signup/signup.component.html
@@ -100,6 +100,12 @@
               <input type="email" id="email" name="email" placeholder="Enter your email id here">
             </div>
           </div>
+          <div class="phone-field field" [ngClass]="{'error' : phoneFieldError}">
+            <label class="label">Phone</label>
+            <div class="ui input">
+              <input type="phone" id="phone" name="phone" placeholder="Enter your phone number here">
+            </div>
+          </div>
           <!-- <div class="username-field field" [ngClass]="{'error' : usernameFieldError}">
             <label class="label">Username</label>
             <div class="ui input">
