Updated discussion path & typo.

--- a/src/app/client/src/app/modules/shared/components/mega-menu/mega-menu.component.html
+++ b/src/app/client/src/app/modules/shared/components/mega-menu/mega-menu.component.html
@@ -14,8 +14,8 @@
           <a href="javascript:void(0);"  (click)="navigateTo('/discussion')" mat-menu-item>
             <mat-icon>settings_brightness</mat-icon>
              <div class="display">
-                <h3 class="	sub-heading-two">Discussion Forum</h3>
-                <p>Discussion Forum space</p>
+                <h3 class="	sub-heading-two">Discussion</h3>
+                <p>Discussion space</p>
              </div>
          </a>
         </li>
