--- a/src/app/client/src/app/modules/learn/components/batch-progress-details/batch-progress-details.component.html
+++ b/src/app/client/src/app/modules/learn/components/batch-progress-details/batch-progress-details.component.html
@@ -7,9 +7,9 @@
         <div class="batch-progress__filters">
             <mat-form-field class="search"  [floatLabel]="'never'">
                 <mat-icon>search</mat-icon>
-                <input matInput type="text" [(ngModel)]="search" placeholder="Search" />                       
+                <input matInput type="text" [(ngModel)]="search" placeholder="Search" (keyup.enter)="searchQuery()" (blur)="searchQuery()" />                       
             </mat-form-field>
-            <div class="batch-progress__dateDropdown">
+            <!-- <div class="batch-progress__dateDropdown">
                 <div class="batch-progress__button" (click)="showDatedropdown=!showDatedropdown">
                     Sort by Date <mat-icon>keyboard_arrow_down</mat-icon>
                 </div>
@@ -35,10 +35,10 @@
                    <button mat-stroked-button class="com-basic-btn" (click)="bulkDateFilter('past-month')"> Past Month </button>
                    <button mat-stroked-button class="com-basic-btn" (click)="bulkDateFilter('past-3-month')"> Past 3 Month </button>
                 </div>
-            </div>
+            </div> -->
                 <mat-form-field [floatLabel]="'never'">
                     <mat-label>All Members</mat-label>
-                        <mat-select [formControl]="status" multiple appearance="none" (selectionChange)="onSelect($event.value)">
+                        <mat-select [formControl]="status" appearance="none" (selectionChange)="onSelect($event.value)">
                             <mat-option *ngFor="let comp of statusList" [value]="comp">{{comp}}</mat-option>
                         </mat-select>
                 </mat-form-field>
