--- a/src/app/client/src/app/modules/explore-page/components/explore-page/explore-page.component.html
+++ b/src/app/client/src/app/modules/explore-page/components/explore-page/explore-page.component.html
@@ -254,7 +254,7 @@
         (init)="slickInit($event)" (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)"
         (beforeChange)="beforeChange($event)">
         <div ngxSlickItem class="slide" *ngFor='let course of recentlyPublishedList;'>
-          <compass-course-card (courseCardClicked)="courseCardClicked($event, course['identifier'])" class="" [data]="course" (favoriteIconClicked)="favoriteIconClicked($event)">
+          <compass-course-card (courseCardClicked)="courseCardClicked($event, course['identifier'])" class="" [data]="course" (favoriteIconClicked)="favoriteIconClicked($event, course['identifier'])">
           </compass-course-card>
         </div>
       </ngx-slick-carousel>
