--- a/src/app/client/src/app/modules/shared/components/mega-menu/mega-menu.component.html
+++ b/src/app/client/src/app/modules/shared/components/mega-menu/mega-menu.component.html
@@ -51,6 +51,15 @@
            </div>
        </a>
       </li>
+      <li>
+        <a href="javascript:void(0);"  (click)="navigateTo('search/wishlist')" mat-menu-item>
+          <mat-icon class="favourite-icon">favorite</mat-icon>
+           <div class="display">
+              <h3 class="	sub-heading-two">Wishlist</h3>
+              <p>Effortlessly save and organise your must-haves</p>
+           </div>
+       </a>
+      </li>
     </ul>
     <h3 class="	sub-heading-mobile" (click)="$event.stopPropagation();"
     *ngIf="permissionService.checkRolesPermissions(adminDashboard)"
