--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.html
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.html
@@ -31,7 +31,8 @@
           class="com-secondary-btn right-floated">{{resourceService?.frmelmnts?.lbl?.anncmntinboxseeall}}</button></div>
         <div class="ui grid middle aligned stackable">
           <div class="three wide column" *ngFor="let data of attendedTraining.slice(0, 4)">
-            <compass-course-card (click)="redirectToToc(data['contentId'], data['batch']['batchId'])" [data]="data"></compass-course-card>
+            <compass-course-card (click)="redirectToToc(data['contentId'], data['batch']['batchId'])" [data]="data"
+            (favoriteIconClicked)="favoriteIconClicked($event)"></compass-course-card>
           </div>
         </div>
       </section>
