--- a/src/app/client/src/app/modules/public/components/landing-page/landing-page.component.html
+++ b/src/app/client/src/app/modules/public/components/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
     <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="slideConfig" (init)="slickInit($event)"
         (breakpoint)="breakpoint($event)" (afterChange)="afterChange($event)" (beforeChange)="beforeChange($event)" responsive="breakpoints">
         <div ngxSlickItem class="slide" *ngFor='let course of courses;'>
-            <compass-course-card [data]="course"></compass-course-card>
+            <compass-course-card [data]="course" [showIcon]="showIcon"></compass-course-card>
         </div>
     </ngx-slick-carousel>
 </div>
