--- a/src/app/client/src/app/modules/search/components/courses-search/courses-search.component.scss
+++ b/src/app/client/src/app/modules/search/components/courses-search/courses-search.component.scss
@@ -50,3 +50,13 @@
         top: 10px !important;
     }
 }
+
+::ng-deep snack-bar-container.wishlist-snackbar{
+    background-color: white;
+    border-radius: 0px !important;
+    min-width: 161px !important;
+    height: 54px;
+    text-align: center;
+    justify-content: center;
+    display: flex !important;
+}
