--- a/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/profile-page/profile-page.component.scss
@@ -377,3 +377,13 @@ body .slick-next {
 .com-secondary-btn {
   font-weight: 500;
 }
+
+::ng-deep snack-bar-container.wishlist-snackbar{
+  background-color: white;
+  border-radius: 0px !important;
+  min-width: 161px !important;
+  height: 54px;
+  text-align: center;
+  justify-content: center;
+  display: flex !important;
+}
