--- a/src/app/client/src/app/modules/shared-feature/components/data-table/data-table.component.html
+++ b/src/app/client/src/app/modules/shared-feature/components/data-table/data-table.component.html
@@ -2,7 +2,7 @@
   <div class="table-wrap">
     <table mat-table [dataSource]="dataSource" matSort>
       <ng-container [matColumnDef]="col" *ngFor="let col of displayedColumns">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> <ng-container *ngIf="col !==  'link' && col !==  'appIcon' && col !==  'initials'">{{col}}</ng-container></th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> <ng-container *ngIf="col !==  'link' && col !==  'appIcon' && col !==  'initials'">{{splitColumnName(col)}}</ng-container></th>
         <td mat-cell *matCellDef="let row"> 
             <ng-container *ngIf="col ===  'link'">
                 <a [routerLink]='row[col].path' [queryParams]="{name:row['name']}">{{row[col].text}}</a>
