batch and progress UI tweaks

--- a/src/app/client/src/app/modules/learn/components/batch-progress-details/batch-progress-details.component.scss
+++ b/src/app/client/src/app/modules/learn/components/batch-progress-details/batch-progress-details.component.scss
@@ -30,12 +30,14 @@
                     position: absolute;
                     top:2px;
                     right:0px;
-                    width: 260px;
+                    width: 88%;
+                    height: 21px;
+                    padding-left: 2px;
                 }
             }
             .mat-form-field-label{
                 top:12px;
-                left:12px;
+                left:15px;
             }
             .mat-form-field-underline{
                 display: none;
