--- a/src/app/client/src/app/modules/shared-feature/components/data-table/data-table.component.html
+++ b/src/app/client/src/app/modules/shared-feature/components/data-table/data-table.component.html
@@ -5,7 +5,7 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> <ng-container *ngIf="col !==  'link' && col !==  'appIcon' && col !==  'initials'">{{splitColumnName(col)}}</ng-container></th>
         <td mat-cell *matCellDef="let row"> 
             <ng-container *ngIf="col ===  'link'">
-                <a [routerLink]='row[col].path' [queryParams]="{name:row['name']}">{{row[col].text}}</a>
+                <a [routerLink]='row[col].path' [queryParams]="{name:row['name'], primaryCategory:row['primaryCategory']}">{{row[col].text}}</a>
             </ng-container>
             <ng-container *ngIf="col !==  'link'">
                 <!-- <img *ngIf="col === 'appIcon'" [src]="row['appIcon']" /> -->
