--- a/src/app/client/src/app/modules/shared-feature/components/data-table/data-table.component.scss
+++ b/src/app/client/src/app/modules/shared-feature/components/data-table/data-table.component.scss
@@ -61,6 +61,9 @@ table {
     padding: 0.4rem;
     margin-right: 5px;
     text-transform: uppercase;
+    display: inline-flex;
+    justify-content: center;
+    min-width: 30px;
 }
 
 .progress-bar{
