--- a/src/app/client/src/app/modules/workspace/components/all-content/all-content.component.html
+++ b/src/app/client/src/app/modules/workspace/components/all-content/all-content.component.html
@@ -143,7 +143,7 @@
             <tr *ngFor = "let row of collectionData">
               <td class="white-space-inherit">{{row['contentType']}}</td>
               <td class="white-space-inherit font-weight-bold">{{row['name']}}</td>
-              <td class="white-space-inherit">{{row[targetTaxonomyIds[3]][0]?.join(", ") || '-'}}</td>
+              <td class="white-space-inherit">{{row[targetTaxonomyIds[3]]?.join(", ") || '-'}}</td>
               <td class="white-space-inherit">{{row[targetTaxonomyIds[2]]?.join(", ") || '-'}}</td>
               <td class="white-space-inherit">{{row[targetTaxonomyIds[1]]?.join(", ") || '-'}}</td>
               <td class="white-space-inherit">{{row[targetTaxonomyIds[0]]}}</td>
