--- a/src/app/client/src/app/modules/discussion/components/access-discussion/access-discussion.component.html
+++ b/src/app/client/src/app/modules/discussion/components/access-discussion/access-discussion.component.html
@@ -4,10 +4,10 @@
     alt="DF">
   DF
 </button> -->
-<div class="ui container mt-48" *ngIf="discussionUrl">
+<!-- <div class="ui container mt-48" *ngIf="discussionUrl">
   <div class="ui grid stackable w-100 padded">
-      <div class="twelve wide column" style="height: 700px;">
+      <div class="twelve wide column" style="height: 700px;"> -->
           <iframe id="df-iframe" scrolling="no" [src]="discussionUrl" (load)="hideElements()"></iframe>
-      </div>
+      <!-- </div>
   </div>
-</div>
+</div> -->
