--- a/src/app/client/src/app/modules/shared/components/snack-bar/snack-bar.component.html
+++ b/src/app/client/src/app/modules/shared/components/snack-bar/snack-bar.component.html
@@ -1,4 +1,4 @@
 <div class="snackbar-content">
     <mat-icon class="favorite-icon">favorite</mat-icon>
-    <span class="message">Wishlisted</span>
+    <span class="message">{{data.message}}</span>
 </div>
