--- a/src/app/client/src/app/modules/search/components/home-search/home-search.component.html
+++ b/src/app/client/src/app/modules/search/components/home-search/home-search.component.html
@@ -43,7 +43,7 @@
         <ng-container>
           <div class="courseContainer d-flex">
             <compass-course-card *ngFor="let content of contentList;let i = index;" (click)="redirectToToc(content)" class="course" [data]="content"
-            (favoriteIconClicked)="favoriteIconClicked($event)"></compass-course-card>
+            (favoriteIconClicked)="favoriteIconClicked($event, content['identifier'])"></compass-course-card>
           </div>
         </ng-container>
         <!-- <div *ngFor="let section of contentList; let last = last" [ngClass]="{'last mb-0':last}">
