recently published courses

--- a/src/app/client/src/app/modules/search/components/courses-search/courses-search.component.scss
+++ b/src/app/client/src/app/modules/search/components/courses-search/courses-search.component.scss
@@ -60,3 +60,8 @@
     justify-content: center;
     display: flex !important;
 }
+.mat-list {
+    .mat-list-item {
+        height: auto;
+    }
+}
