--- a/src/app/client/src/app/plugins/profile/components/personal-details/personal-details.component.html
+++ b/src/app/client/src/app/plugins/profile/components/personal-details/personal-details.component.html
@@ -33,6 +33,59 @@
         </div>
 
       <!-- Second Column -->
+      <div class="form-column">
+        <div class="form-group">
+          <label>Area of Interest</label>
+          <input class="input" type="text" placeholder="Type here" />
+        </div>
+        <div class="form-group">
+          <label>Domicile Medium (Mother Tongue)</label>
+          <input class="input" type="text" placeholder="Type here" />
+        </div>
+        <div class="form-group">
+          <label>Other languages known</label>
+          <input class="input" type="text" placeholder="Type here" />
+        </div>
+        <div class="form-group">
+          <label>Mobile Number</label>
+          <div class="phone">
+            <input class="input w-10 mr-10" type="text" placeholder="+91" />
+            <input class="input w-90" type="text" placeholder="Type here" />
+          </div>
+        </div>
+        <div class="form-group">
+          <label>Telephone Number</label>
+          <input class="input" type="text" placeholder="Type here" />
+        </div>
+        <div class="form-group">
+          <label>Primary email</label>
+          <input class="input" type="text" placeholder="Type here" />
+          <div class="sb-checkbox sb-checkbox-primary sb-checkbox-leftaligned">
+            <input type="checkbox" tabindex="0" />
+            <label class="fsmall mt-10" role="img">This is my official email</label>
+          </div>
+        </div>
+        
+        <div class="form-group">
+          <label>Secondary email</label>
+          <input class="input" type="text" placeholder="Type here" />
+        </div>
+        <div class="form-group">
+          <label>Postal address</label>
+          <textarea
+            id=""
+            name=""
+            placeholder="Type here"
+            class="textarea"
+            rows="5"
+          ></textarea>
+          <span class="subscript m-3">0/300 characters</span>
+        </div>
+        <div class="form-group">
+          <label>Pin Code</label>
+          <input class="input" type="text" placeholder="Type here" />
+        </div>
+      </div>
       <!-- <div class="form-column">
         <div *ngFor = "let field of formData.colTwo.fields" class="form-group">
             <label for="{{field.value}}">{{field.label}}</label>
