--- a/src/app/client/src/app/modules/learn/components/course-consumption/course-aside/course-aside.component.html
+++ b/src/app/client/src/app/modules/learn/components/course-consumption/course-aside/course-aside.component.html
@@ -28,7 +28,7 @@
                 </text>
             </svg>
         </span>
-        <span class="sub-heading-one">Batch Progress </span>
+        <span class="sub-heading-one">Course Completion rate </span>
     </div>
 
     <div *ngIf="getResultMessage()" class="assessment-result">
