--- a/src/app/client/src/app/plugins/profile/components/certification-and-skills/certification-and-skills.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/certification-and-skills/certification-and-skills.component.scss
@@ -135,33 +135,49 @@ p {
   }
 }
 ::ng-deep {
-  .mat-radio-button {
-    padding: 14px 24px;
-    margin: 16px 16px;
-    margin-bottom: 0;
-    border: solid 1px var(--com-grey-border);
-    border-radius: 4px;
-    label {
-      margin: 0;
-    }
-  }
-  mat-radio-button:first-of-type {
-    margin: 16px 0;
-    margin-bottom: 0;
-  }
-  .mat-radio-checked {
-    border: 1.5px solid rgb(35, 134, 252);
-    opacity: 1;
-    background-color: rgba(0, 116, 182, 0.05);
-    .mat-radio-label {
-      .mat-radio-container {
-        .mat-radio-outer-circle {
-          border-color: rgb(35, 134, 252);
-        }
-        .mat-radio-inner-circle {
-          background-color: rgb(35, 134, 252);
-        }
+  .mat-radio-button{
+      padding: 14px 24px;
+      margin: 16px 16px;
+      border: solid 1px var(--com-grey-border);
+      label{
+          margin: 0;
       }
     }
+  .mat-radio-checked{
+      border: 1.5px solid rgba(35,134,252, 1);
+      opacity: 1;
+      background-color: rgba(0,116,182, 0.05);
+      .mat-radio-label{
+          .mat-radio-container{
+              .mat-radio-outer-circle{
+                  border-color: var(--primary-color);
+              }
+              .mat-radio-inner-circle{
+                  background-color: var(--primary-color);
+              }
+          }
+      }
   }
+
+  .mat-form-field-flex {
+    padding-left: 10px !important;
+    padding-bottom: 10px !important;
+    // border-bottom: solid 1px #949494;
+  }
+
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    height: 0px !important;
+  }
+
+  .mat-form-field-appearance-fill .mat-form-field-flex {
+    background: #ffffff;
+  }
+
+  .mat-form-field-infix {
+    display: inline-flex !important;
+  }
+}
+
+*:focus-visible {
+  border: unset !important;
 }
