--- a/src/app/client/src/app/plugins/profile/components/academic-details/academic-details.component.html
+++ b/src/app/client/src/app/plugins/profile/components/academic-details/academic-details.component.html
@@ -1,82 +1,130 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit($event)">
-    <div class="ui grid stackable m-0 p-0">
-      <!-- First Column -->
-      <div class="six wide column m-0 p-0">
-        <div class="form-container">
-          <div class="form-column">
-            <p>10th Standard</p>
-            <div class="form-group">
-              <label>School Name</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <div class="form-group">
-              <label>School Name</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-          </div>
-        </div>
-  
-      
-        <div class="form-container">
-          <div class="form-column">
-            <p>Graduation Details</p>
-            <div class="form-group">
-              <label>Degree</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <div class="form-group">
-              <label>Year of Passing</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <div class="form-group">
-              <label>Institute Name</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <button class="com-secondary-btn">Add Another Qualification</button>
-          </div>
+  <div class="ui grid stackable m-0 p-0">
+    <!-- First Column -->
+    <div class="six wide column m-0 p-0">
+      <div class="form-container">
+        <div class="form-column">
+          <p>10th Standard</p>
+          <mat-form-field appearance="outline">
+            <mat-label>School Name</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="tenthSchoolName"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Year of passing</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="tenthSchoolPassing"
+              placeholder="Type here"
+            />
+          </mat-form-field>
         </div>
       </div>
-  
-      <!-- Second Column -->
-      <div class="six wide column m-0 p-0">
-          <div class="form-container">
-              <div class="form-column">
-                <p>12th Standard</p>
-                <div class="form-group">
-                  <label>School Name</label>
-                  <input class="input" type="text" placeholder="Type here" />
-                </div>
-                <div class="form-group">
-                  <label>School Name</label>
-                  <input class="input" type="text" placeholder="Type here" />
-                </div>
-              </div>
-            </div>
-        <div class="form-container">
-          <div class="form-column">
-            <p>Post Graduation Details</p>
-            <div class="form-group">
-              <label>Degree</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <div class="form-group">
-              <label>Year of Passing</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <div class="form-group">
-              <label>Institute Name</label>
-              <input class="input" type="text" placeholder="Type here" />
-            </div>
-            <button class="com-secondary-btn">Add Another Qualification</button>
-          </div>
+
+      <div class="form-container">
+        <div class="form-column">
+          <p>Graduation Details</p>
+          <mat-form-field appearance="outline">
+            <mat-label>Degree</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="graduationName"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Year of passing</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="graduationPassing"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Institute Name</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="graduationInstituteName"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <button class="com-secondary-btn">Add Another Qualification</button>
         </div>
       </div>
     </div>
-  
-    <div class="submitbtn">
-      <button class="com-primary-btn btn" type="submit">
-        {{ resourceService.frmelmnts.lbl.editProfile.submit }}
-      </button>
+
+    <!-- Second Column -->
+    <div class="six wide column m-0 p-0">
+      <div class="form-container">
+        <div class="form-column">
+          <p>12th Standard</p>
+          <mat-form-field appearance="outline">
+            <mat-label>School Name</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="twelthSchoolNames"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Year of passing</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="twelthShoolPassingYear"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+        </div>
+      </div>
+      <div class="form-container">
+        <div class="form-column">
+          <p>Post Graduation Details</p>
+          <mat-form-field appearance="outline">
+            <mat-label>Degree</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="DegreeName"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Year of passing</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="degreeYearOfPassing"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <mat-form-field appearance="outline">
+            <mat-label>Institute Name</mat-label>
+            <input
+              matInput
+              #input
+              formControlName="degreeInstituteName"
+              placeholder="Type here"
+            />
+          </mat-form-field>
+          <button class="com-secondary-btn">Add Another Qualification</button>
+        </div>
+      </div>
     </div>
-  </form>
-  
+  </div>
+
+  <div class="submitbtn">
+    <button class="com-primary-btn btn" type="submit">
+      {{ resourceService.frmelmnts.lbl.editProfile.submit }}
+    </button>
+  </div>
+</form>
