--- a/src/app/client/src/app/plugins/profile/components/academic-details/academic-details.component.scss
+++ b/src/app/client/src/app/plugins/profile/components/academic-details/academic-details.component.scss
@@ -1,4 +1,4 @@
-@use "compass-sb-styles/assets/mixins/mixins"as *;
+
 
 .form-container {
   display: flex;
@@ -48,22 +48,7 @@ p {
     text-align: left;
     line-height: 20px;
   }
-  input {
-    height: 60px;
-    border: solid 1px var(--com-grey-border);
-    border-radius: 4px;
-    padding-left: 10px;
-  }
-  .input:focus-visible {
-    border: solid 1px var(--primary-color) !important;
-  }
-  .input:hover {
-    border: solid 1px var(--primary-color);
-  }
-  input.input::placeholder {
-    color: var(--com-grey-border);
-    font-weight: 500;
-  }
+
   textarea {
     border: solid 1px var(--com-grey-border);
     border-radius: 4px;
@@ -119,28 +104,50 @@ p {
     height: 148px;
   }
 }
-// ::ng-deep {
-//   .mat-radio-button {
-//     padding: 14px 24px;
-//     margin: 0;
-//     border: solid 1px var(--com-grey-border);
-//     label {
-//       margin: 0;
-//     }
-//   }
-//   .mat-radio-checked {
-//     border: 1.5px solid rgba(35, 134, 252, 1);
-//     opacity: 1;
-//     background-color: rgba(0, 116, 182, 0.05);
-//     .mat-radio-label {
-//       .mat-radio-container {
-//         .mat-radio-outer-circle {
-//           border-color: var(--primary-color);
-//         }
-//         .mat-radio-inner-circle {
-//           background-color: var(--primary-color);
-//         }
-//       }
-//     }
-//   }
-// }
+::ng-deep {
+  .mat-radio-button{
+      padding: 14px 24px;
+      margin: 16px 16px;
+      border: solid 1px var(--com-grey-border);
+      label{
+          margin: 0;
+      }
+    }
+  .mat-radio-checked{
+      border: 1.5px solid rgba(35,134,252, 1);
+      opacity: 1;
+      background-color: rgba(0,116,182, 0.05);
+      .mat-radio-label{
+          .mat-radio-container{
+              .mat-radio-outer-circle{
+                  border-color: var(--primary-color);
+              }
+              .mat-radio-inner-circle{
+                  background-color: var(--primary-color);
+              }
+          }
+      }
+  }
+
+  .mat-form-field-flex {
+    padding-left: 10px !important;
+    padding-bottom: 10px !important;
+    // border-bottom: solid 1px #949494;
+  }
+
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    height: 0px !important;
+  }
+
+  .mat-form-field-appearance-fill .mat-form-field-flex {
+    background: #ffffff;
+  }
+
+  .mat-form-field-infix {
+    display: inline-flex !important;
+  }
+}
+
+*:focus-visible {
+  border: unset !important;
+}
